--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ body {
 
 .form-element input {
     font-family: 'Rubik', sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     padding: 10px;
     border: none;
 }
@@ -431,7 +431,7 @@ body {
         top: 64px;
         gap: 25px;
         flex-direction: column;
-        padding-top: 70px;
+        justify-content: center;
         background-color: #222222;
         width: 100%;
         height: 30%;
@@ -446,7 +446,6 @@ body {
         
     .navbar-item {
         margin: 0;
-        /* top: 80px; */
     }
     
     .navbar-link {
