--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
 
 .menu-wrapper {
     margin: 80px 0 100px;
+    min-height: calc(100vh - 133px);
 }
 
 .menu-list {
@@ -176,7 +177,10 @@ body {
 
 
 
-
+.section-wrapper {
+    min-height: calc(100vh - 133px);
+    margin: 60px 0 80px;
+}
 
 .sculpture-section {
     display: flex;
@@ -184,12 +188,12 @@ body {
 }
 
 .sculpture {
-    margin: 60px 0 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50%;
-    border: 1px solid rgba(187, 182, 182, 0.6)
+    border: 1px solid rgba(187, 182, 182, 0.6);
+    background-color: whitesmoke;
 }
 
 .sculpture-image {
@@ -296,13 +300,16 @@ body {
     color: #03683d;
 }
 
+.form-wrapper {
+    min-height: calc(100vh - 133px);
+    margin: 50px 0;
+}
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 15px;
-    margin: 50px 0;
 }
 
 .form-title {
@@ -343,10 +350,8 @@ body {
 }
 
 .form-message {
-    height: 38px;
     font-size: 22px;
     font-weight: 500;
-    color: #03683d;
 }
 
 @media (max-width: 982px) {
